src/css/profile/mobile/common/toast.less
/* Popup Toast and smallpopup will be integrated */
/* Popup Toast */
.ui-popup.ui-popup-toast {
	background-color: transparent;
	margin: 0 auto;
	position: relative;
	bottom: 0;
	width: 100%;

	.ui-popup-content {
		margin: auto;
		margin-bottom: 64 * @px_base;
		width: fit-content;
		display: flex;
		align-items: center;
		justify-content: space-between;
		border-radius: 22 * @px_base;
		background-color: var(--toast-background);
		padding: 12 * @px_base 20 * @px_base;
		line-height: 20 * @px_base;
		color: @color_toast_text;
		font-size: @font_size_toast_text;
		.font(regular);

		@media all and (max-width: 479px) {
			max-width: 84%;
			&.ui-popup-toast-has-button {
				width: 84%;
			}
		}
		
		@media all and (min-width: 480px) and (max-width: 959px) {
			max-width: 68%;
			&.ui-popup-toast-has-button {
				width: 68%;
			}
		}

		@media all and (min-width: 960px) and (max-width: 1919px) {
			max-width: 37.5%;
			&.ui-popup-toast-has-button {
				width: 37.5%;
			}
		}

		&.ui-popup-toast-has-button {
			text-align: left;
			min-height: 44 * @px_base;
			padding: 0 * @px_base 20 * @px_base;
			background-color: var(--btn-toast-background);
			.ui-btn {
				padding: 4 * @px_base 0 4 * @px_base 20 * @px_base;
				margin: 0;
				width: fit-content;
				color: var(--btn-toast-text-color);
				font-size: @font_size_toast_button_text;
				.font(medium);
				background-color: transparent;
				line-height: 36 * @px_base;
				overflow: visible;
				&:not(.ui-btn-circle):not(.ui-btn-nobg):not(.ui-floatingactions-item) {
					background-color: transparent;
					border: none;
					border-radius: 0;

					&::before {
						border-radius: 0;
						background-color: @color_toast_button_bg_press;
					}

					&.ui-btn-active {
						background-color: transparent;
					}
				}

			}
		}
	}
}


/* smallpopup */
.m-notification-ui-smallpopup-show() {
	from {
		display: none;
		opacity: 0;
		.transform(scaleY(0));
	}
	to {
		display: block;
		opacity: 1;
		.transform(scaleY(1));
	}
}


@keyframes ui-smallpopup-show {
	.m-notification-ui-smallpopup-show();
}

.ui-smallpopup {
	position: fixed;
	display: none;
	margin-bottom: 64 * @unit_base;
	max-width: 472 * @unit_base;
	z-index: @z_base_smallpopup;
	vertical-align: middle;
	font-size: @font_size_toast_text;
	word-break: break-all;
}

.ui-smallpopup::before {
	position: absolute;
	content: '';
	width: 100%;
	height: 100%;
}

.ui-smallpopup.fix {
	display: block;
}

.ui-smallpopup.show {
	display: block;
	.animation(ui-smallpopup-show 500ms 1 ease);
}

.ui-smallpopup.hide {
	display: none;
}

.ui-smallpopup-text-bg {
	position: relative;
	padding: 7 * @unit_base 24 * @unit_base 10 * @unit_base 24 * @unit_base;
	line-height: 37 * @unit_base;
	margin: 0;
	color: @color_toast_text;
	font-size: @font_size_toast_text;
}

